// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`TextField > should not receive onChange event when not a number changes 1`] = `
<div>
  <div
    class="textFieldInputContainer error"
  >
    <input
      class="textfield"
      data-testid="test-my-textfield-textfield"
      id="my-textfield"
      max="100"
      min="0"
      name="my-textfield"
      type="number"
      value=""
    />
  </div>
</div>
`;

exports[`TextField > should not receive onChange event when number above max changes 1`] = `
<div>
  <div
    class="textFieldInputContainer error"
  >
    <input
      class="textfield"
      data-testid="test-my-textfield-textfield"
      id="my-textfield"
      max="100"
      min="0"
      name="my-textfield"
      type="number"
      value="101"
    />
  </div>
</div>
`;

exports[`TextField > should not receive onChange event when number bellow min changes 1`] = `
<div>
  <div
    class="textFieldInputContainer error"
  >
    <input
      class="textfield"
      data-testid="test-my-textfield-textfield"
      id="my-textfield"
      max="100"
      min="0"
      name="my-textfield"
      type="number"
      value="-1"
    />
  </div>
</div>
`;

exports[`TextField > should receive onChange event when number changes 1`] = `
<div>
  <div
    class="textFieldInputContainer"
  >
    <input
      class="textfield"
      data-testid="test-my-textfield-textfield"
      id="my-textfield"
      name="my-textfield"
      type="number"
      value="1337"
    />
  </div>
</div>
`;

exports[`TextField > should receive onChange event when number equal max changes 1`] = `
<div>
  <div
    class="textFieldInputContainer"
  >
    <input
      class="textfield"
      data-testid="test-my-textfield-textfield"
      id="my-textfield"
      max="100"
      name="my-textfield"
      type="number"
      value="100"
    />
  </div>
</div>
`;

exports[`TextField > should receive onChange event when number equal min changes 1`] = `
<div>
  <div
    class="textFieldInputContainer"
  >
    <input
      class="textfield"
      data-testid="test-my-textfield-textfield"
      id="my-textfield"
      min="0"
      name="my-textfield"
      type="number"
      value="0"
    />
  </div>
</div>
`;

exports[`TextField > should receive onChange event when text changes 1`] = `
<div>
  <div
    class="textFieldInputContainer"
  >
    <input
      class="textfield"
      data-testid="test-my-textfield-textfield"
      id="my-textfield"
      name="my-textfield"
      type="text"
      value="some value"
    />
  </div>
</div>
`;

exports[`TextField > should render a TextField with type number 1`] = `
<div>
  <div
    class="textFieldInputContainer"
  >
    <input
      class="textfield"
      data-testid="test-my-textfield-textfield"
      id="my-textfield"
      name="my-textfield"
      type="number"
      value=""
    />
  </div>
</div>
`;

exports[`TextField > should render a TextField with type text 1`] = `
<div>
  <div
    class="textFieldInputContainer"
  >
    <input
      class="textfield"
      data-testid="test-my-textfield-textfield"
      id="my-textfield"
      name="my-textfield"
      type="text"
      value="some value"
    />
  </div>
</div>
`;
